2007-04-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/eigen.c 
	* examples/simple/eigen.c : removed, not needed

2007-04-10  Gabor Csardi  <csardi@rmki.kfki.hu>
 
	* src/eigen.c (igraph_eigen_tred2, igraph_eigen_tql2)
	(igraph_eigen_tred1, igraph_eigen_tqlrat, igraph_eigen_rs) : added
	* src/eispack_eigen.f (BALANC, BALBAK, CBABK2, CBAL, CDIV)
	(COMQR, COMQR2, CORTH, CSROOT, ELMHES, ELTRAN, HQR, HQR2)
	(HTRIBK, HTRIDI, TQL1, TQL2, TQLRAT, TRED1, TRED2, RG)
	(RS, CG, CH) added (ie. copyied from the R source code)
	* examples/simple/eigen.c : added

	* src/vector.c (igraph_vector_maxdifference) : added
	* src/matrix.c (igraph_matrix_is_equal, igraph_matrix_maxdifference) :
	added

	* src/error.f (IGRAPH_DIVERGED) : added new error type

2007-04-08  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/graphobject.c : adjusted interface of
	community_clauset
	* interfaces/python/package/clustering.py : added
	* interfaces/python/package/__init__.py : modified clustering
	functions to return instances of VertexClustering

2007-04-07  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/spmatrix.c : added
	* tests/layout.at : corrected a bug when building outside
	source tree
	* src/community.c (igraph_community_clauset) : added
	* src/vector.c (igraph_vector_insert) : added
	* src/conversion.c (igraph_get_adjacency_sparse) : added

2007-04-07  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/community.c (igraph_modularity) : added

2007-04-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/community.c (igraph_community_to_membership) : added

	* src/fastcommunity_mh.cc (igraph_community_fastgreedy) :
	return the usual merge matrix format

	* src/fastcommunity_mh.cc : added

2007-04-04  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/community.c (igraph_community_edge_betweenness) : 
	'merges' and 'bridges' options added
	* src/community.c (igraph_community_eb_get_merges) : added
	* examples/simple/igraph_community_edge_betweenness: updated
