@@ -1,3 +1,10 @@
+2007-04-15  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* src/community.c (igraph_community_leading_eigenvector)
+	(igraph_community_leading_eigenvector_naive) : original renamed to
+	'_naive' and new version added
+	* examples/simple/igraph_community_leading_eigenvector.c : updated
+
 2007-04-14  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* src/eigen.c 
